[package]
name = "st7920"
description = "SPI driver for the ST7920 LCD display controller"
authors = ["Wojciech Jakóbczyk <jakobczyk.woj@gmail.com>"]
categories = ["embedded", "no-std"]
documentation = "https://docs.rs/st7920"
exclude = [".gitignore"]
keywords = ["no-std", "st7920", "lcd", "embedded", "embedded-hal-driver"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wjakobczyk/st7920"
version = "0.3.1-alpha"
edition = "2018"

[dependencies]
embedded-hal = "=1.0.0-alpha.9"
num-traits = { version = "0.2.12", default-features = false }
num-derive = { version = "0.3.2", default-features = false }
embedded-graphics = { optional = true, version = "0.7.1" }

[dev-dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
stm32f4 = { version = "0.11.0", features = ["stm32f407", "rt"] }
stm32f4xx-hal = { version = "0.8.3", default-features = false, features = ["rt", "stm32f407"] }

[profile.release]
codegen-units = 1
debug = true
lto = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]
graphics-unchecked = ["graphics"]
